# Simple-File-Explorer

./: .env.example  .gitignore  README.md  SFX.spec  app.py  build.sh  config.example.py  hook-webui.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  webuiTemplate.py  wsgi.py
api/: __init__.py  logic.py
assets/: ascii-text-art.txt  ascii_art.py
templates/: base.html  index.html  mediaPlayer.html  webUI.html  webuiIndex.html
